[metadata]
name=vertebrae
version=0.5.3
author=privateducky
author_email=coldduck@protonmail.com
description=A backend framework for async Python microservices
long_description=file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    aiohttp==3.8.1
    aiohttp_session==2.11.0
    psycopg2-binary==2.9.3
    pyyaml==6.0
    aioredis~=2.0.1
    aiopg~=1.3.4
packages = find:
